[gd_scene load_steps=3 format=3 uid="uid://boueadrfx15jl"]

[ext_resource type="Script" uid="uid://co7w8okoqita5" path="res://root/scenes/scene/menu_scene/save_files_menu/menu_save_file/menu_save_file.gd" id="2_orwck"]
[ext_resource type="PackedScene" uid="uid://b4b36g3uhwemg" path="res://root/scenes/component/audio/button_audio/button_audio.tscn" id="4_vpb3k"]

[node name="MenuSaveFile" type="MarginContainer"]
custom_minimum_size = Vector2(666, 0)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("2_orwck")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SaveFileMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SaveFileMarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SaveFileMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlaytimeHBoxContainer" type="HBoxContainer" parent="VBoxContainer/SaveFileMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NomeFase" type="Label" parent="VBoxContainer/SaveFileMarginContainer/HBoxContainer/VBoxContainer/PlaytimeHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Fase 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveFileButtonMarginContainer" type="MarginContainer" parent="VBoxContainer/SaveFileMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = -8
theme_override_constants/margin_top = -8
theme_override_constants/margin_right = -8
theme_override_constants/margin_bottom = -8

[node name="SaveFileButton" type="Button" parent="VBoxContainer/SaveFileMarginContainer/SaveFileButtonMarginContainer"]
unique_name_in_owner = true
z_index = -2048
layout_mode = 2
toggle_mode = true

[node name="ButtonAudio" parent="VBoxContainer/SaveFileMarginContainer/SaveFileButtonMarginContainer/SaveFileButton" instance=ExtResource("4_vpb3k")]
